@@ -64,3 +64,20 @@ command:
  EOF
 _description:
  This is an automated test to gather some info on the current state of your network devices. If no devices are found, the test will exit with an error.
+
+plugin: local
+name: ethernet/stress_performance
+requires:
+  device.category == 'NETWORK'
+_description: Automated test that tests performance of each wired network device under stress.
+command:
+ cat <<'EOF' | run_templates -s 'udev_resource | filter_templates -w "category=NETWORK" | awk "/path: / { print \$2 }" | xargs -n 1 sh -c "for i in \`ls /sys\$0/net 2>/dev/null\`; do echo \$0 \$i; done"'
+ plugin: shell
+ name: ethernet/stress_performance_$2
+ requires: device.path == "$1"
+ user: root
+ command: network test -i $2 -t stress
+ _description:
+  This test executes iperf to generate a load on the network device and then performs a ping test to watch for dropped packets and very large latency periods.
+ EOF
+ 
